--- a/client/client.jade
+++ b/client/client.jade
@@ -35,7 +35,7 @@ template(name='layout')
                 //-     +checkin_card current_session_doc
                 //- else 
         //- if is_eric
-        //- +footer 
+    +footer 
 
     //- .context
     //-     +nav
