--- a/client/product.jade
+++ b/client/product.jade
@@ -260,6 +260,15 @@ template(name='shop_earnings')
 template(name='shop_chat')                        
     +comments
                     
+template(name='product_ads')                        
+    .ui.center.aligned.header 
+        +i name='billboard'
+        |product ads
+    .ui.button make ad for product
+    .ui.header advertise in searches and to people for credit.  
+    .ui.header create auction for keywords, tags, like google adwords
+    
+           
 template(name='product_ownership')                        
     .ui.header 
         i.hand.holding.usd.icon
