--- a/client/profile.jade
+++ b/client/profile.jade
@@ -29,10 +29,8 @@ template(name='user_layout')
                     if is_current_user
                         .ui.icon.button.logout(title='log out')
                             +i name='exit-sign'
-                        a.ui.fluid.button.logout_other_clients(href="#")
+                        a.ui.small.button.logout_other_clients(href="#")
                             |logout other clients
-                    //- unless is_staff
-                    //-     +gr_status                
                     if is_admin
                         .ui.segment
                             .ui.grey.header 
@@ -44,6 +42,8 @@ template(name='user_layout')
                 .twelve.wide.column.shadowed-box
                     a.ui.icon.button(href="/user/#{username}" class="{{isActiveRoute 'user_about'}}" title='info')
                         +i name='info'
+                    a.ui.icon.button(href="/user/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}" title='info')
+                        +i name='dashboard'
                     a.ui.icon.button(href="/user/#{username}/documents" class="{{isActiveRoute 'user_documents'}}" title='social')
                         +i name='documents'
                     a.ui.icon.button(href="/user/#{username}/products" class="{{isActiveRoute 'user_products'}}" title='shop')
@@ -70,11 +70,47 @@ template(name='user_products')
     .ui.header 
         +i name='shop'
         |#{user_from_username_param.username}'s products
+        .ui.cards
+            each products
+                +user_product
+            
+            
+template(name='user_product')
+    .ui.link.card.goto_shop_item_page
+        img.ui.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
+        .content
+            .header #{title}
+            .meta #{when}
+            
+        .content
+            .right.floated 
+                if for_sale
+                    span(title='for sale')
+                        i.grey.cart.icon
+                        $#{dollar_price}
+                if rentable
+                    div
+                    span(title='rentable')
+                        i.grey.clock.icon
+                        $#{hourly_rate}
+            +small_author_info
+            //- img.ui.avatar.image(src="{{c.url author.image_id height=200 width=200 crop='fit'}}")
+            //- |#{_author_username}
+        .extra.content
+            .right.floated 
+                |#{sales}
+                i.money.icon
+            i.eye.icon
+            |#{views}
+
     
     
-template(name='user_about')
-    //- img.ui.fluid.rounded.image(src="{{c.url banner_image_id width=1000 height=200 crop='crop'}}")
+template(name='user_dashboard')
     +dashboard
+            
+template(name='user_comparison')
+    .ui.header user comparison
+    .ui.header simulate conversation between you and them using site stats
             
 template(name='user_transactions')
     .ui.segment
