--- a/client/shop.jade
+++ b/client/shop.jade
@@ -1,3 +1,72 @@
+template(name='shop')
+    .ui.padded.stackable.grid.header-wrapper
+        .row
+            .sixteen.wide.column
+                .ui.icon.large.button.new_item
+                    i.green.plus.icon
+                +cloud filter='shop_item'
+                .scrolling
+                    .ui.centered.five.stackable.cards
+                        each shop_items
+                            +shop_item
+template(name='shop_item')
+    //- .ui.card
+    .ui.link.card.goto_shop_item_page
+        img.ui.image(src="{{c.url image_id height=200 width=300 crop='lpad'}}")
+        .content
+            .header #{title}
+            .meta #{when}
+            
+        .content
+            .right.floated 
+                if for_sale
+                    span(title='for sale')
+                        i.grey.cart.icon
+                        $#{dollar_price}
+                if rentable
+                    div
+                    span(title='rentable')
+                        i.grey.clock.icon
+                        $#{hourly_rate}
+            +small_author_info
+            //- img.ui.avatar.image(src="{{c.url author.image_id height=200 width=200 crop='fit'}}")
+            //- |#{_author_username}
+        .extra.content
+            .right.floated 
+                |#{sales}
+                i.money.icon
+            i.eye.icon
+            |#{views}
+            
+template(name='shop_item_page')
+    .ui.padded.stackable.grid.header-wrapper
+        .row
+            .sixteen.wide.column
+                with doc
+                    a.ui.big.button(href='/shop')
+                        i.left.chevron.icon
+                        i.shop.icon
+                    h1.ui.inline.header #{title} $#{price}
+                    div
+                    each tags
+                        .ui.basic.label #{this}
+                    img.ui.centered.rounded.image(src="{{c.url image_id height=400 crop='fit'}}")
+                    .ui.center.aligned.header venmo $#{price} to this address and verify with staff to complete
+                    .ui.small.header #{views} views
+                    +comments
+                    img.ui.centered.large.image(src='/qr.png')
+
+
+
+
+
+
+
+
+
+
+
+
 template(name='shop_dashboard')
     .ui.stackable.padded.grid
         .three.wide.column
