--- a/client/styles.css
+++ b/client/styles.css
@@ -126,6 +126,7 @@ input.username_search{
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
     background-color: white !important;
+    padding:10px !important;
     /* transform: translate(0, 4px); */
 }
 
