--- a/components/cloud.jade
+++ b/components/cloud.jade
@@ -50,13 +50,13 @@ template(name='cloud')
         //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
         // .ui.hidden.fitted.divider
     if selected_tags
-        #clear_tags.ui.active.icon.button
+        #clear_tags.ui.active.icon.large.button
             i.remove.icon
         each selected_tags
-            .unselect_tag.ui.active.button
+            .unselect_tag.ui.active.large.button
                 strong #{this}
     each all_tags
-        .ui.basic.button.select_tag(class=cloud_tag_class) 
+        .ui.basic.large.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
