--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -35,7 +35,7 @@ template(name='user_edit')
                     +array_edit key='tags' label='tags' icon='tags' direct=true
                     +array_edit key='location_tags' label='location tags' icon='location' direct=true
                 .column
-                    +text_edit key='spirit_animal' label='spirit animal' icon='vominitg-unicorn' direct=true
+                    +text_edit key='spirit_animal' label='spirit animal' icon='year-of-monkey' direct=true
                     +link_edit key='link' label='link' icon='link' direct=true
                     .ui.header money
                     +boolean_edit key='accepts_cash' label='accepts cash' direct=true
