--- a/components/groups.jade
+++ b/components/groups.jade
@@ -1,38 +1,38 @@
-template(name='events')
+template(name='groups')
     .ui.padded.stackable.grid.header-wrapper
         .ui.hidden.divider
         .row
             .four.wide.column
                 h1.ui.massive.inline.header 
-                    +i name='calendar'
-                    |events
-                .ui.icon.large.button.new_event
+                    +i name='groups'
+                    |groups
+                .ui.icon.large.button.new_group
                     i.green.plus.icon
-                +cloud filter='event'
+                +cloud filter='group'
             .twelve.wide.column
                 .ui.centered.four.cards
-                    each event_items
-                        +event_item
+                    each group_items
+                        +group_item
                         
                         
                         
-template(name='event_item')
-    .ui.link.card.event_card
+template(name='group_item')
+    .ui.link.card.group_card
         .image
             img(src="{{c.url image_id height=300 crop='lpad'}}")
         .content
             .header #{title}
             |!{description}
         .content
-            i.small.calendar.icon
+            i.small.groups.icon
             each date_tags
                 .ui.small.basic.label #{this}
         .content
-            |#{attending_usernames.length} attendees
-            each attending_usernames
+            |#{attending_usernames.length} members
+            each members
                 .ui.basic.label #{this}
 
-template(name='event_page')
+template(name='group_page')
     with current_doc
         .ui.padded.stackable.grid.header-wrapper
             .row
@@ -41,49 +41,42 @@ template(name='event_page')
             .row
                 .four.wide.column
                     if can_edit
-                        a.ui.icon.button(href="/event/#{_id}/edit" title='edit')
+                        a.ui.icon.button(href="/group/#{_id}/edit" title='edit')
                             +i name='settings'
                     +array_view key='tags' icon='tags' direct=true
                     +array_view key='location_tags' label='location tags' icon='marker' direct=true
-                    +array_view key='date_tags' label='date tags' icon='calendar' direct=true
+                    +array_view key='date_tags' label='date tags' icon='groups' direct=true
                 .six.wide.column
                     +image_view key='image_id' direct=true
                     +html_view key='description' direct=true
                 .five.wide.column
-                    +datetime_view key='start_datetime' label='start date/time' direct=true
-                    div
-                    +datetime_view key='end_datetime' label='end date/time' direct=true
-                    .ui.header attendees
-                    if attending 
-                        .ui.button.mark_unattending 
+                    .ui.header members
+                    if is_member 
+                        .ui.button.leave 
                             i.ban.grey.icon
-                            |mark unattending
+                            |leave
                     else
-                        .ui.button.mark_attending
+                        .ui.button.join
                             i.green.checkmark.icon
-                            |mark attending
-                    each attending_usernames 
+                            |join
+                    each members 
                         .ui.large.basic.label #{this}
-                    +voting_full
-                    +comments
 
-template(name='event_edit')
+
+
+template(name='group_edit')
     with current_doc
         .ui.padded.stackable.grid.header-wrapper
             .row
                 .five.wide.column
                     .ui.inline.header #{title}
-                    a.ui.large.basic.icon.button(href="/event/#{_id}")
+                    a.ui.large.basic.icon.button(href="/group/#{_id}")
                         i.big.green.checkmark.icon
-                    .ui.basic.icon.button.delete_event_item
+                    .ui.basic.icon.button.delete_group_item
                         i.red.remove.icon
                     +text_edit key='title' icon='header' direct=true
                     +array_edit key='tags' icon='tags' direct=true
                     +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                    +array_edit key='date_tags' label='date tags' icon='calendar' direct=true
                 .six.wide.column
                     +image_edit key='image_id' direct=true
                     +html_edit key='description' direct=true
-                .five.wide.column
-                    +datetime_edit key='start_datetime' label='start date/time' direct=true
-                    +datetime_edit key='end_datetime' label='end date/time' direct=true
